--- a/OpenGLMaze/Base.lproj/Main.storyboard
+++ b/OpenGLMaze/Base.lproj/Main.storyboard
@@ -25,18 +25,50 @@
                                 <rect key="frame" x="272" y="575" width="51" height="31"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </switch>
+                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="oOG-lG-788" userLabel="Flashlight Toggle">
+                                <rect key="frame" x="272" y="536" width="51" height="31"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </switch>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Day/Night" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="72h-Jo-y0y">
+                                <rect key="frame" x="188" y="580" width="76" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Position: (x, y, z)" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ScP-a7-I4d">
+                                <rect key="frame" x="32" y="20" width="327" height="61"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Flashlight" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nWL-Oe-i2c" userLabel="Label Flashlight">
+                                <rect key="frame" x="188" y="541" width="76" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
-                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.77740446890000003" green="0.77740446890000003" blue="0.77740446890000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <gestureRecognizers/>
                         <connections>
                             <outletCollection property="gestureRecognizers" destination="hLH-01-xLk" appends="YES" id="itV-ej-WrC"/>
                             <outletCollection property="gestureRecognizers" destination="0ap-2d-MJd" appends="YES" id="j3X-YH-qqp"/>
                             <outletCollection property="gestureRecognizers" destination="KHU-Oj-BFr" appends="YES" id="mSM-V3-pNN"/>
                             <outletCollection property="gestureRecognizers" destination="lml-PN-BmC" appends="YES" id="Dfn-Yj-ISK"/>
+                            <outletCollection property="gestureRecognizers" destination="8dE-l6-gzH" appends="YES" id="e1E-M8-F7z"/>
+                            <outletCollection property="gestureRecognizers" destination="ckG-FQ-VNd" appends="YES" id="FrC-ET-Yfi"/>
                         </connections>
                     </view>
                     <connections>
                         <outlet property="dayNightToggle" destination="6Qe-Xv-6jy" id="PPm-QM-4lS"/>
+                        <outlet property="labelConsoleInfo" destination="ScP-a7-I4d" id="8iQ-K5-KDL"/>
+                        <outlet property="labelDayNight" destination="72h-Jo-y0y" id="jpM-sr-qwg"/>
+                        <outlet property="labelFlashlight" destination="nWL-Oe-i2c" id="Slw-q8-J0Y"/>
+                        <outlet property="toggleDayNight" destination="6Qe-Xv-6jy" id="58U-CS-B2O"/>
+                        <outlet property="toggleFlashlight" destination="oOG-lG-788" id="sLX-Ev-mKy"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SZV-WD-TEh" sceneMemberID="firstResponder"/>
@@ -60,6 +92,24 @@
                         <action selector="swipeDown:" destination="BV1-FR-VrT" id="05k-t2-1fU"/>
                     </connections>
                 </swipeGestureRecognizer>
+                <tapGestureRecognizer numberOfTapsRequired="2" numberOfTouchesRequired="2" id="8dE-l6-gzH" userLabel="DoubleTapTwoFinger">
+                    <connections>
+                        <action selector="doubleTap:" destination="BV1-FR-VrT" id="vW7-X5-BrA"/>
+                    </connections>
+                </tapGestureRecognizer>
+                <tapGestureRecognizer numberOfTapsRequired="2" id="ckG-FQ-VNd" userLabel="DoubleTapOneFinger">
+                    <connections>
+                        <action selector="doubleTapResetMaze:" destination="BV1-FR-VrT" id="xcT-b0-BiR"/>
+                    </connections>
+                </tapGestureRecognizer>
+            </objects>
+            <point key="canvasLocation" x="24.800000000000001" y="34.632683658170919"/>
+        </scene>
+        <!--Storyboard Reference-->
+        <scene sceneID="dPt-FF-E3i">
+            <objects>
+                <viewControllerPlaceholder id="ucl-dD-gCJ" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Vie-cE-sQK" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
         </scene>
     </scenes>
