Started fog system

--- a/OpenGLMaze/Base.lproj/Main.storyboard
+++ b/OpenGLMaze/Base.lproj/Main.storyboard
@@ -29,8 +29,19 @@
                                 <rect key="frame" x="272" y="536" width="51" height="31"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </switch>
+                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="d5R-Wa-Eiw" userLabel="Fog Toggle">
+                                <rect key="frame" x="272" y="616" width="51" height="31"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </switch>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Day/Night" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="72h-Jo-y0y">
                                 <rect key="frame" x="188" y="580" width="76" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Flashlight" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nWL-Oe-i2c" userLabel="Label Flashlight">
+                                <rect key="frame" x="188" y="541" width="76" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
@@ -43,8 +54,8 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Flashlight" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nWL-Oe-i2c" userLabel="Label Flashlight">
-                                <rect key="frame" x="188" y="541" width="76" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Fog (Unfinished)" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ahK-7D-C1W" userLabel="Label Fog (Unfinished)">
+                                <rect key="frame" x="137" y="621" width="127" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
@@ -67,8 +78,10 @@
                         <outlet property="labelConsoleInfo" destination="ScP-a7-I4d" id="8iQ-K5-KDL"/>
                         <outlet property="labelDayNight" destination="72h-Jo-y0y" id="jpM-sr-qwg"/>
                         <outlet property="labelFlashlight" destination="nWL-Oe-i2c" id="Slw-q8-J0Y"/>
+                        <outlet property="labelFog" destination="ahK-7D-C1W" id="TgS-nd-FD2"/>
                         <outlet property="toggleDayNight" destination="6Qe-Xv-6jy" id="58U-CS-B2O"/>
                         <outlet property="toggleFlashlight" destination="oOG-lG-788" id="sLX-Ev-mKy"/>
+                        <outlet property="toggleFog" destination="d5R-Wa-Eiw" id="NBf-NS-a6n"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SZV-WD-TEh" sceneMemberID="firstResponder"/>
